.docs/example/nginx-ingress-with-ebs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
  namespace: apps
spec:
  serviceName: nginx-headless
  selector:
    matchLabels:
      app: nginx
  volumeClaimTemplates:
    - metadata:
        name: aws-ebs
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: gp2
        resources:
          requests: 
            storage: 5Gi
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: aws-ebs
              mountPath: /home/nginx/aws-ebs
            # - name: nginx-config
            #   mountPath: /etc/nginx/conf.d/default.conf
            #   subPath: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: apps
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: my-loadbalancer
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
